# AutoMasks

./: .gitignore  README.md  Taskfile.yml  appveyor.yml  errors.txt  main.py  pyproject.toml  requirements.txt
app/: .env-sample  config.py  main.py
app/backend/: main.py
app/backend/src/: converters.py  downloader.py  drower.py  enums.py  exceptions.py  handlers.py  job.py  schemas.py  session.py  settings.py  task.py
app/backend/src/gateways/: db.py
app/frontend/: app.py  exceptions.py  radio.py
app/utils/: main_service.py  misc.py
backend/: .env-sample  __init__.py  main.py
backend/src/: converters.py  drawer.py  exceprions.py  handlers.py  instance.py  masks.py  queries.py  schemas.py  settings.py  utils.py
frontend/: __init__.py  app.py  settings.py
utils/: main_process.py  misc.py
